crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__no_fields.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {},
      {}
    ]
  }
]
