crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_5.snap
---
source: crates/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Let There Be Rock"
      },
      {
        "Title": "Big Ones"
      },
      {
        "Title": "Jagged Little Pill"
      },
      {
        "Title": "Facelift"
      },
      {
        "Title": "Warner 25 Anos"
      }
    ]
  }
]
