crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_array_column.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "series": [
          1,
          2,
          3,
          4,
          5
        ]
      }
    ]
  }
]
