crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_array_variable.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": 2
      }
    ]
  },
  {
    "rows": [
      {
        "result": 3
      }
    ]
  }
]
