crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_by_pk.snap
---
source: crates/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      }
    ]
  }
]
