crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_composite_column_simple.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "address_line_1": "Somstreet 159",
          "address_line_2": "Second door to the right"
        }
      }
    ]
  }
]
