crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_composite_variable_complex.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "name": {
            "first_name": "John",
            "last_name": "Doe"
          },
          "address": {
            "address_line_1": "Somstreet 159",
            "address_line_2": "Second door to the right"
          }
        }
      }
    ]
  },
  {
    "rows": [
      {
        "result": {
          "name": {
            "first_name": "Jane",
            "last_name": "Doe"
          },
          "address": {
            "address_line_1": "Somstreet 159",
            "address_line_2": "Second door to the right"
          }
        }
      }
    ]
  }
]
