crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__basic__select_int_and_string.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 35,
        "title": "Garage Inc. (Disc 1)"
      }
    ]
  }
]
